Setup runable postgres dependency

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,3 +1,8 @@
 BROKERS=localhost:19092
 TOPICS=placeholder-topic
 CONSUMER_GROUP=placeholder-consumer-group
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_NAME=elixir_kafka_consumer
+DB_USERNAME=root
+DB_PASSWORD=
