Add missing env variable in env sample

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,6 +1,7 @@
 BROKERS=localhost:19092
 TOPICS=placeholder-topic
 CONSUMER_GROUP=placeholder-consumer-group
+REGISTRY_URL=http://127.0.0.1:8081
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_NAME=elixir_kafka_consumer
